# pixview

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  LICENSE  Makefile  Makefile-win  imageview.cpp  imageview.h  imageworker.cpp  imageworker.h  library.cpp  library.h  main.cpp  mainview.h  mainwindow.cpp  mainwindow.h  setting.cpp  setting.h  viewstate.h
